# doggo-share

./: Cargo.toml  README.md  apple-app-site-association  assetlinks.json
back/: .env.example  .gitignore  Cargo.toml  setup.sh
back/migrations/2023-05-10-170505_create_files/: down.sql
back/src/: main.rs  schema.rs
back/src/db/: mod.rs
back/src/handlers/: error.rs  mod.rs
back/src/middlewares/: mod.rs
back/src/models/: form.rs  mod.rs
back/src/models/db/: file.rs
back/src/models/response/: file.rs  mod.rs
back/src/routes/: files_routes.rs  mod.rs  static_assets.rs  support_routes.rs
back/src/services/: mod.rs  trash_collector.rs
back/src/utils/: mod.rs
mobile/: .env  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/Runner/: Info.plist  Runner.entitlements
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/api/: doggo_api.dart
mobile/lib/components/layout/: create_doggo_file.dart  doggo_audio_player.dart  doggo_video_player.dart  last_link.dart  stored_link_search.dart
mobile/lib/models/error/: doggo_error.dart
mobile/lib/models/request/: doggo_multipart.dart
mobile/lib/models/response/: doggo_file.dart  doggo_response.dart
mobile/lib/providers/: stored_links_providers.dart
mobile/lib/services/: link_storage_service.dart
mobile/lib/theme/: colors.dart  theme.dart
mobile/lib/utils/: multipart_request.dart  universal_links_helper.dart  utils.dart
mobile/lib/views/: all_stored_links.dart  create_file_view.dart  file_preview.dart  file_sending_loader.dart  home.dart  login.dart  success_file.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/web/: index.html
models/: Cargo.toml
models/migrations/00000000000000_diesel_initial_setup/: up.sql
models/migrations/2023-05-10-170505_create_files/: up.sql
models/migrations/2024-02-06-101014_create_support_posts/: down.sql  up.sql
models/src/: doggo_file.rs  helpers.rs  lib.rs  static_vars.rs  support_form.rs
models/src/handlers/: error.rs
web/: Cargo.toml  index.html  style.css
web-leptos/: .gitignore  Cargo.toml  README.md
web-leptos/.cargo/: config.toml
web-leptos/src/: app.rs  lib.rs  utils.rs
web-leptos/src/components/: doggo_button.rs  logo.rs  mod.rs  next_button.rs
web-leptos/src/views/: home.rs  loader.rs  mod.rs  privacy.rs
web-leptos/style/: _colors.scss  main.scss
web-leptos/style/components/: _doggo_button.scss
web-leptos/style/home/: _home_details.scss  _logo.scss
web/src/: main.rs
web/src/components/: doggo_input_file.rs  input_file.rs  logo.rs  mod.rs
web/src/views/: home.rs
web_helper/: Cargo.toml
web_helper/src/: api.rs  lib.rs  utils.rs
web_helper/src/models/: doggo_error.rs  doggo_file.rs  doggo_response.rs  mod.rs
(+2 files in other folders)
