[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.2.0"
actix = "0.13.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
reqwest = { version = "0.11.14", features = ["json", "gzip"] }
futures = "0.3.27"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "network-address", "r2d2"] }
actix-multipart = "0.6.0"
chrono = { version = "0.4.23", features = ["serde"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "uuid"] }
actix-files = "0.6.2"
actix-rt = "2.8.0"
futures-util = "0.3.28"
actix-cors = "0.6.4"
