[package]
name = "doggo-share-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "network-address", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
reqwest = { version = "0.11.14", features = ["json", "gzip"] }
regex = "1.10.3"
lazy_static = "1.4.0"
