[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
gloo = "0.8.1"
js-sys = "0.3.64"
# wasm-bindgen = "0.2.87"
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
doggo_share_web_helper = { path = "../web_helper" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }


[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
