[package]
name = "doggo_share_web_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde", "js"] }
reqwest-wasm = { version = "0.11.14", features = ["json", "gzip", "multipart"] }
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde_json = "1"
dotenvy = "0.15.7"

[dependencies.gloo]
version = "0.8.1"
features = ["futures"]
